added export for the notification